@@ -1,9 +1,11 @@
 #ifndef EVF_SHMOUTPUTMODULE_REGISTRY_H
 #define EVF_SHMOUTPUTMODULE_REGISTRY_H
 
+#include "FWCore/ParameterSet/interface/ParameterSet.h"
 #include <string>
 #include <map>
 #include <vector>
+
 
 namespace edm{
   class ParameterSet;
@@ -30,6 +32,7 @@ namespace evf
 
       std::string getDatasetNamesString();
       std::vector<edm::FUShmOutputModule *> & getShmOutputModulesWithDatasets() {return shmOutputsWithDatasets_;}
+      void insertStreamAndDatasetInfo(edm::ParameterSet & streams, edm::ParameterSet & datasets);
 
     private:
       typedef std::map<std::string, OutputModule*> dct;
