@@ -1,3 +1,7 @@
+2012-09-03 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* dataset information provided by FUEventProcessor
+
 2012-09-02 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-08-16
